--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!-- links do projeto -->
+
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap"
       rel="stylesheet"
@@ -236,6 +238,7 @@
             anos, curso o 3° Redes de Computadores no IFS (Instituto Federal de
             Sergipe). Gosto de ler, assistir  e jogar, principalmente futebol.
           </section>
+
 
           <section>
             <div class="image">
