--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 
     <link rel="stylesheet" href="./assets/css/index.css" />
 
+    <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon">
+
     <title>narradopormulheres</title>
   </head>
 
@@ -344,7 +346,7 @@
         </div>
 
         <div class="social-networks">
-          <p>Constate-nos: <a href="#"><i class="bi bi-instagram"></i></a></p>
+          <p>Contate-nos: <a href="https://instagram.com/narrado_por_mulheres?igshid=OGQ5ZDc2ODk2ZA==" rel="external" target="_blank"><i class="bi bi-instagram"></i></a></p>
         </div>
 
         <div class="copy">
