--- a/women.html
+++ b/women.html
@@ -14,7 +14,16 @@
 
     <!-- Link BootStrap Icons -->
 
-  <link rel="stylesheet" href="./node_modules/bootstrap-icons/font/bootstrap-icons.css">
+    <link
+      rel="stylesheet"
+      href="./node_modules/bootstrap-icons/font/bootstrap-icons.css"
+    />
+
+    <link
+      rel="shortcut icon"
+      href="./assets/images/favicon.ico"
+      type="image/x-icon"
+    />
     <title>Mulheres importantes</title>
   </head>
   <body>
@@ -169,7 +178,15 @@
       </div>
 
       <div class="social-networks">
-        <p>Constate-nos: <a href="#"><i class="bi bi-instagram"></i></a></p>
+        <p>
+          Contate-nos:
+          <a
+            href="https://instagram.com/narrado_por_mulheres?igshid=OGQ5ZDc2ODk2ZA=="
+            rel="external"
+            target="_blank"
+            ><i class="bi bi-instagram"></i
+          ></a>
+        </p>
       </div>
 
       <div class="copy">
