--- a/sport.html
+++ b/sport.html
@@ -19,6 +19,9 @@
     <!-- Link BootStrap Icons -->
 
   <link rel="stylesheet" href="./node_modules/bootstrap-icons/font/bootstrap-icons.css">
+
+  <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon">
+
     <title>Esporte IFS</title>
   </head>
   <body>
@@ -33,13 +36,13 @@
       >
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./assets/images/1.jpg" alt="..." />
+            <img src="./assets/images/team1.jpg" alt="..." />
           </div>
           <div class="carousel-item">
-            <img src="./assets/images/2.png" alt="..." />
+            <img src="./assets/images/team2.jpg" alt="..." />
           </div>
           <div class="carousel-item">
-            <img src="./assets/images/3.jpg" alt="..." />
+            <img src="./assets/images/team3.jpg" alt="..." />
           </div>
         </div>
       </div>
@@ -99,7 +102,7 @@
       </div>
 
       <div class="social-networks">
-        <p>Constate-nos: <a href="#"><i class="bi bi-instagram"></i></a></p>
+        <p>Contate-nos: <a href="https://instagram.com/narrado_por_mulheres?igshid=OGQ5ZDc2ODk2ZA==" rel="external" target="_blank"><i class="bi bi-instagram"></i></a></p>
       </div>
 
       <div class="copy">
